# DubInstante

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux.yml  main.yml  test-macos.yml  windows.yml
deploy/: Info.plist
docs/en/: README.md
docs/fr/: README.md
include/: AudioRecorderManager.h  Exporter.h  MainWindow.h  PlayerController.h  RythmoOverlay.h  RythmoWidget.h  VideoWidget.h
resources/: style.qss
src/: AudioRecorderManager.cpp  Exporter.cpp  MainWindow.cpp  PlayerController.cpp  RythmoOverlay.cpp  RythmoWidget.cpp  VideoWidget.cpp
src/gui/: MainWindow.cpp  RythmoWidget.cpp  RythmoWidget.h
src/phonegui/: CMakeLists.txt  main.cpp
